# front-tellar-tauri

./: .env  .gitignore  drizzle.config.ts  jest.config.cjs  jest.setup.cjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/activate/: page.tsx
app/app-settings/: layout.tsx  page.tsx  useSettingsViewModel.ts
app/components/: ConfirmDeleteButton.tsx  DateRangePresetFilter.tsx  LicenseGuard.tsx  ModuleLayout.tsx  Pagination.tsx  PermissionSyncInitializer.tsx  Skeletons.tsx  SyncButton.tsx  SyncTauriTheme.tsx  Tabs.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx  UpdateNotification.tsx
app/context/: AuthContext.tsx  NotificationContext.tsx
app/customer-management/: layout.tsx  page.tsx  useCustomerViewModel.ts
app/hooks/: useNotification.ts  usePagination.ts  useSettings.ts
app/inventory/: layout.tsx  page.tsx  useInventoryViewModel.ts
app/lib/: license.ts  middleware-pipeline.ts
app/login/: page.tsx
app/reports/: page.tsx
app/sales/: layout.tsx  page.tsx  useSalesViewModel.ts
db/: index.d.ts  index.ts
drizzle/: 0000_careful_diamondback.sql  0000_chubby_george_stacy.sql  0000_normal_eternity.sql  0001_wealthy_giant_man.sql  0002_lowly_drax.sql
public/: splash.html
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sequence_generator.rs  sync_commands.rs  sync_engine.rs
src-tauri/src/commands/: license.rs
(+95 files in other folders)
