[package]
name = "front-tellar-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "front_tellar_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
sha2 = "0.10"
mac_address = "1.1"
sysinfo = "0.30"
keyring = "2.0"
uuid = { version = "1.23.1", features = ["v4"] }
hostname = "0.4.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
chrono = "0.4.44"
base64 = "0.22.1"
url = "2.5.8"

[target."cfg(windows)".dependencies]
winreg = "0.52"


